fix cropper css

--- a/client/src/containers/settings/user-settings.scss
+++ b/client/src/containers/settings/user-settings.scss
@@ -361,7 +361,6 @@
 .user-photo-selector-modal {
   display: flex;
   flex-direction: column;
-  width: 100%;
   align-items: center;
   justify-content: center;
   background-color: $white;
@@ -392,7 +391,7 @@
     height: 120px;
     width: 120px;
     border-radius: 50%;
-    // object-fit: cover;
+    object-fit: cover;
     opacity: 1;
 
     &.loading-image {
